[gd_scene load_steps=15 format=3 uid="uid://c0aw0lh4f4mys"]

[ext_resource type="Script" path="res://scripts/ui/AlertDialog.gd" id="1_850lf"]
[ext_resource type="Texture2D" uid="uid://c2ih08t74tjfr" path="res://assets/ui/textbox/textbox_v1.png" id="2_4y4nc"]
[ext_resource type="Theme" uid="uid://8ljahhyhocjx" path="res://assets/themes/UI.tres" id="3_51m2j"]
[ext_resource type="Theme" uid="uid://btkajnikr21jf" path="res://assets/themes/RedirectTheme.tres" id="4_pqnt5"]
[ext_resource type="FontFile" uid="uid://dn8jthylka01q" path="res://assets/fonts/AtlantisHeadline-Bold.ttf" id="5_hp2ex"]
[ext_resource type="Texture2D" uid="uid://cqbwe6dlomtaj" path="res://assets/ui/checkbox/check_square_grey_checkmark.png" id="6_wril7"]
[ext_resource type="Texture2D" uid="uid://y62rjv8so4jh" path="res://assets/ui/checkbox/check_round_grey_circle.png" id="7_n48a0"]
[ext_resource type="Texture2D" uid="uid://q682h7qmstcl" path="res://assets/ui/checkbox/check_round_grey.png" id="8_5di3i"]
[ext_resource type="Texture2D" uid="uid://cx1onici47gf" path="res://assets/ui/checkbox/check_square_grey.png" id="9_jj7kg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rdmo8"]
bg_color = Color(0, 0, 0, 0.568627)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6jdcl"]
texture = ExtResource("2_4y4nc")
texture_margin_left = 45.4039
texture_margin_top = 45.0
texture_margin_right = 45.0
texture_margin_bottom = 45.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1cwll"]
bg_color = Color(0, 0, 0, 0.54902)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 0.705882)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 4
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4uxf2"]

[sub_resource type="Theme" id="Theme_iak7k"]
CheckBox/colors/font_color = Color(1, 1, 1, 1)
CheckBox/constants/h_separation = 17
CheckBox/constants/outline_size = 8
CheckBox/font_sizes/font_size = 16
CheckBox/fonts/font = ExtResource("5_hp2ex")
CheckBox/icons/checked = ExtResource("6_wril7")
CheckBox/icons/radio_checked = ExtResource("7_n48a0")
CheckBox/icons/radio_unchecked = ExtResource("8_5di3i")
CheckBox/icons/unchecked = ExtResource("9_jj7kg")
CheckBox/styles/focus = SubResource("StyleBoxEmpty_4uxf2")

[node name="AlertDialog" type="CanvasLayer"]
layer = 10
script = ExtResource("1_850lf")

[node name="DarkenBGPanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rdmo8")

[node name="PopupMargin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 45
theme_override_constants/margin_right = 45
theme_override_constants/margin_bottom = 45

[node name="Panel" type="Panel" parent="PopupMargin"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6jdcl")

[node name="ContentMargin" type="MarginContainer" parent="PopupMargin/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="ContentVBox" type="VBoxContainer" parent="PopupMargin/Panel/ContentMargin"]
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 15

[node name="PopupTitle" type="Label" parent="PopupMargin/Panel/ContentMargin/ContentVBox"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_51m2j")
theme_override_font_sizes/font_size = 28
text = "PopupTitle"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="PopupMargin/Panel/ContentMargin/ContentVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1cwll")

[node name="MessageMargin" type="MarginContainer" parent="PopupMargin/Panel/ContentMargin/ContentVBox/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ScrollContainer" type="ScrollContainer" parent="PopupMargin/Panel/ContentMargin/ContentVBox/Panel/MessageMargin"]
visible = false
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Control" type="Control" parent="PopupMargin/Panel/ContentMargin/ContentVBox/Panel/MessageMargin/ScrollContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PopupMessage" type="RichTextLabel" parent="PopupMargin/Panel/ContentMargin/ContentVBox/Panel/MessageMargin/ScrollContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_pqnt5")
bbcode_enabled = true
autowrap_mode = 2

[node name="PopupMessage" type="Label" parent="PopupMargin/Panel/ContentMargin/ContentVBox/Panel/MessageMargin"]
custom_minimum_size = Vector2(0, 420)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("3_51m2j")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
text = "PopupMessage"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PopupMargin/Panel/ContentMargin/ContentVBox"]
layout_mode = 2

[node name="PrivacyCheck" type="CheckBox" parent="PopupMargin/Panel/ContentMargin/ContentVBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = SubResource("Theme_iak7k")
flat = true
autowrap_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PopupMargin/Panel/ContentMargin/ContentVBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_51m2j")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true

[node name="InputHBox" type="HBoxContainer" parent="PopupMargin/Panel/ContentMargin/ContentVBox"]
layout_mode = 2

[node name="PopupButton1" type="Button" parent="PopupMargin/Panel/ContentMargin/ContentVBox/InputHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
theme = ExtResource("3_51m2j")
text = "Name"

[node name="PopupButton2" type="Button" parent="PopupMargin/Panel/ContentMargin/ContentVBox/InputHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
theme = ExtResource("3_51m2j")
text = "name"
